@@ -7,10 +7,12 @@ EXTRA_DIST = \
 	posix_fadvise.vgtest \
 	posix_fallocate.vgtest \
 	posix_fadvise.stderr.exp \
-	posix_fallocate.stderr.exp
+	posix_fallocate.stderr.exp \
+	reallocarray.vgtest \
+	reallocarray.stderr.exp
 
 check_PROGRAMS = \
-	posix_fadvise posix_fallocate
+	posix_fadvise posix_fallocate reallocarray
 
 # Linux also adds  $(FLAG_MMMX) $(FLAG_MSSE) to the first two
 AM_CFLAGS    += @FLAG_M32@
